# AgentsMesh

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  .mcp.json  BUILD.bazel  CHANGELOG.md  CLAUDE.md  MODULE.bazel  README.md  docker-compose.dev.yml  go.mod  go.sum  go.work  package.json  pnpm-lock.yaml
.claude/plans/: proto-naming-conventions.md  proto-watch-list.md
.github/workflows/: bazel.yml  ci.yml  deploy.yml  e2e.yml  release.yml
backend/: .env.example  .golangci.yml  BUILD.bazel  go.mod  go.sum
backend/internal/api/connect/admin/subscription/: BUILD.bazel  convert.go  handlers_query.go
backend/internal/api/connect/binding/: BUILD.bazel  binding_lifecycle.go  binding_query.go  binding_scopes.go  binding_test.go  convert.go
backend/migrations/: 000007_user_git_connections.down.sql  000007_user_git_connections.up.sql  000009_add_files.down.sql  000009_add_files.up.sql  000012_add_performance_indexes.down.sql  000012_add_performance_indexes.up.sql  000016_add_pod_title.down.sql  000016_add_pod_title.up.sql  000030_rename_grpc_registration_tokens.down.sql  000030_rename_grpc_registration_tokens.up.sql  000033_move_preparation_script_to_repository.down.sql  000033_move_preparation_script_to_repository.up.sql  000055_rename_ticket_identifier_to_slug.down.sql  000055_rename_ticket_identifier_to_slug.up.sql  000058_add_runner_agent_versions.down.sql  000058_add_runner_agent_versions.up.sql  000059_update_codex_command_template.down.sql  000059_update_codex_command_template.up.sql  000063_add_loops.down.sql  000063_add_loops.up.sql  000064_add_loop_max_retained_runs.down.sql  000064_add_loop_max_retained_runs.up.sql  000065_remove_loop_trigger_token.down.sql  000065_remove_loop_trigger_token.up.sql  000069_add_pod_credential_profile_id.down.sql  000069_add_pod_credential_profile_id.up.sql  000075_add_runner_logs.up.sql  000075_add_sso_configs.down.sql  000075_add_sso_configs.up.sql  000076_add_runner_logs.down.sql  000078_rename_terminal_scopes_to_pod.down.sql  000078_rename_terminal_scopes_to_pod.up.sql  000079_add_idle_timeout.down.sql  000079_add_idle_timeout.up.sql  000080_add_pod_alias.down.sql  000080_add_pod_alias.up.sql  000081_fix_repository_unique_constraint_soft_delete.down.sql  000081_fix_repository_unique_constraint_soft_delete.up.sql  000083_add_opencode_config.down.sql  000097_podfile_prompt_to_prompt_position.down.sql  (+18 more)
build_defs/: BUILD.bazel  workspace_status.sh
build_defs/docker/: go_oci_image.bzl
build_defs/ios/: BUILD.bazel
build_defs/release/: cross_binary.bzl
build_defs/rust/: BUILD.bazel  napi.bzl
build_defs/web/: BUILD.bazel
ci/: backend.Dockerfile  relay.Dockerfile  runner.Dockerfile  web-admin.Dockerfile  web.Dockerfile
clients/core/: Cargo.toml
clients/desktop/: BUILD.bazel  electron-builder.yml  package.json
clients/ios/: Makefile
clients/web/: BUILD.bazel  next.config.ts  tsconfig.json
clients/web-admin/: BUILD.bazel  next.config.ts
deploy/dev/: .gitignore  backend.Dockerfile  dev.sh  docker-compose.yml  init-seed.sh  init-worktree.sh  runner-entrypoint.sh  runner.Dockerfile  web-entrypoint.sh  web.Dockerfile
deploy/onpremise/: README.md  docker-compose.yml
deploy/selfhost/: .env.example  README.md  docker-compose.yml  selfhost.sh
docs/api/: README.md
docs/mission/: AgentMesh-Pitch-Deck.md  pitch-deck.html
docs/rfc/: RFC-003-runner-release-pipeline.md  RFC-004-terminal-output-bandwidth-optimization.md  RFC-005-autopilot-controller-architecture.md
e2e/: README.md
e2e-playwright/pages/: sidebar.page.ts
e2e/mcp/: README.md  TC-MCP-001-full-collaboration-scenario.yaml
e2e/runner/: TC-RUNNER-001-list-display.yaml  TC-RUNNER-002-capacity-progress.yaml  TC-RUNNER-003-status-update.yaml
podfile/: format.go  go.mod  podspec.go
podfile/eval/: builtins.go  builtins_test.go  context.go  eval_coverage_test.go  eval_decl.go  eval_deepcover_test.go  eval_errorpaths_test.go  eval_expr.go  eval_final_cover_test.go  eval_full_test.go  eval_mode_credential_test.go  eval_shortcircuit_test.go  evaluator.go  evaluator_helpers.go  evaluator_test.go  values.go
podfile/extract/: extractor.go  extractor_coverage_test.go  extractor_test.go
podfile/lexer/: lexer.go  lexer_edge_test.go  lexer_finalcover_test.go  lexer_test.go  token.go
podfile/merge/: merge.go  merge_comprehensive_test.go  merge_finalcover_test.go  merge_integration_test.go  merge_mode_credential_test.go  merge_test.go
podfile/parser/: ast.go  ast_decl.go  ast_stmt.go  parser.go  parser_comprehensive_test.go  parser_coverage_test.go  parser_decl.go  parser_decl_extra.go  parser_expr.go  parser_finalcover_test.go  parser_full_test.go  parser_stmt.go  parser_test.go
podfile/resolve/: resolve.go  resolve_test.go
podfile/serialize/: serialize.go  serialize_expr.go  serialize_merge_test.go  (+3 more)
proto/: BUILD.bazel  go.mod
proto/agent/v1/: BUILD.bazel  agent.proto
proto/billing/v1/: BUILD.bazel  billing.proto  billing_admin.proto
proto/channel/v1/: BUILD.bazel  channel.proto
proto/extension/v1/: BUILD.bazel
proto/file/v1/: BUILD.bazel
proto/mesh/v1/: mesh.proto
proto/notification/v1/: BUILD.bazel
proto/runner/v1/: runner.proto
proto/sso/v1/: BUILD.bazel
proto/support_ticket/v1/: BUILD.bazel  support_ticket_admin.proto
proto/ticket/v1/: BUILD.bazel  ticket.proto
proto/ticket_relations/v1/: BUILD.bazel  ticket_relations.proto
proto/token_usage/v1/: BUILD.bazel
relay/: BUILD.bazel  go.mod  go.sum
relay/cmd/relay/: BUILD.bazel  main.go
runner/: .gitlab-ci.yml  .golangci.yml  .goreleaser.yml  BUILD.bazel  README.md  go.mod  go.sum  nfpm.yaml
runner/internal/acp/claude/: BUILD.bazel  handler.go  transport.go  types.go
runner/internal/acp/codex/: BUILD.bazel  handler.go  transport.go  types.go
runner/internal/cache/: BUILD.bazel  downloader.go  downloader_test.go  skill_cache_test.go
runner/internal/tokenusage/: BUILD.bazel  parser_agents_test.go  parser_claude.go  parser_codex.go  parser_test.go
web/: next.config.ts  package.json  pnpm-lock.yaml
web-admin/: next.config.ts  package.json  pnpm-lock.yaml
(+2197 files in other folders)
