load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools/validate_prost_tags:rule.bzl", "validate_prost_tags")

# Bazel-native protobuf code generation for channel.v1.
#
# Mirrors proto/apikey/v1/BUILD.bazel — same hermetic protoc/protoc-gen-go
# pipeline, same `proto/gen/go/<svc>/v1` importpath shape. The Rust prost
# DTOs are hand-maintained at clients/core/crates/types/src/channel_proto.rs;
# `tools/validate_prost_tags` pins .proto field number ↔ Rust
# `prost(tag = N)` mapping at build time (watch list hazard #8).

proto_library(
    name = "channel_proto",
    srcs = ["channel.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "channel_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/anthropics/agentsmesh/proto/gen/go/channel/v1",
    proto = ":channel_proto",
    visibility = ["//visibility:public"],
)

# Watch list hazard #8 — catch hand-written prost struct drift.
validate_prost_tags(
    name = "channel_validate",
    proto = "channel.proto",
    rust = "//clients/core/crates/types:src/channel_proto.rs",
)
