load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools/validate_prost_tags:rule.bzl", "validate_prost_tags")

proto_library(
    name = "file_proto",
    srcs = ["file.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "file_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/anthropics/agentsmesh/proto/gen/go/file/v1",
    proto = ":file_proto",
    visibility = ["//visibility:public"],
)

validate_prost_tags(
    name = "file_validate",
    proto = "file.proto",
    rust = "//clients/core/crates/types:src/file_proto.rs",
)
