load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools/validate_prost_tags:rule.bzl", "validate_prost_tags")

# Bazel-native protobuf code generation for ticket_relations.v1.
#
# Mirrors proto/repository/v1/BUILD.bazel — hermetic protoc/protoc-gen-go
# pipeline. The Rust prost DTOs are hand-maintained at
# clients/core/crates/types/src/ticket_relations_proto.rs;
# validate_prost_tags pins the .proto field number ↔ Rust `prost(tag = N)`
# mapping at build time.
#
# TS message classes ship as a committed mirror under
# proto/gen/ts/ticket_relations/v1/ — pending Bazel-native ts_proto_library
# macro per runbook "TS proto codegen toolchain".

proto_library(
    name = "ticket_relations_proto",
    srcs = ["ticket_relations.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "ticket_relations_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/anthropics/agentsmesh/proto/gen/go/ticket_relations/v1",
    proto = ":ticket_relations_proto",
    visibility = ["//visibility:public"],
)

validate_prost_tags(
    name = "ticket_relations_validate",
    proto = "ticket_relations.proto",
    rust = "//clients/core/crates/types:src/ticket_relations_proto.rs",
)
