load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools/validate_prost_tags:rule.bzl", "validate_prost_tags")

proto_library(
    name = "token_usage_proto",
    srcs = ["token_usage.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "token_usage_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/anthropics/agentsmesh/proto/gen/go/token_usage/v1",
    proto = ":token_usage_proto",
    visibility = ["//visibility:public"],
)

validate_prost_tags(
    name = "token_usage_validate",
    proto = "token_usage.proto",
    rust = "//clients/core/crates/types:src/token_usage_proto.rs",
)
